# fund-lens-etl

./: .env.example  .gitignore  .pre-commit-config.yaml  CICD.md  DEPLOYMENT.md  README.md  pyproject.toml  test_gold_contribution_insert.py  test_numpy_conversion.py  test_numpy_from_sql.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 08b489c39265_rename_county_city_to_office_county_.py  0a99e4fe4e2c_create_committees_table.py  0f708bc57915_make_entity_type_nullable_in_silver_and_.py  14a5a00448d1_create_contributions_table.py  22201b46ddde_add_maryland_bronze_tables.py  2acf8b2e7a04_fix_candidate_stats_committee_linkage.py  46b1ad3bf030_remove_unique_constraint_from_raw_.py  5cb2f0eb777c_create_fec_contributions_staging_table.py  6511fadb3b71_create_candidates_table.py  68952ef02f71_add_candidate_jurisdiction_and_location_.py  7150844b223a_expand_state_id_columns_for_sha256.py  79bc0fd8ed87_create_raw_filings_table.py  7c7c9bebaf6e_add_office_raw_to_gold_candidate.py  7e2afd0dcba6_add_enriched_fields_to_silver_and_party_.py  825abd2848c8_add_candidate_stats_materialized_view.py  9e49ab3b53c6_make_bronze_md_contribution_contributor_.py  a1b2c3d4e5f6_update_materialized_views_for_state_data.py  a3f2c9d87e14_add_earmark_tracking_fields.py  a707f904e4bb_add_extraction_metadata_table.py  aaa112bb248c_create_donors_table.py  b67f9f8896a8_add_missing_fields_to_bronze_committee_.py  b7a86bbb7137_make_committee_name_nullable.py  ba224162ca90_add_extraction_metadata_table.py  c60de9a45492_add_maryland_silver_tables.py  c9b4e7f12d38_add_contributor_stats_materialized_view.py  (+10 more)
deployments/: deploy_fec_backfill.py  deploy_fec_extraction.py
docs/: BULK_DATA_DEPLOYMENT.md  CLEANUP_NON_MARYLAND_DATA.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICK_START.md  EXTRACTION_STATE_FIX.md  FINAL_PIPELINE_ARCHITECTURE.md  MONTHLY_RECONCILIATION.md  REDEPLOY_GUIDE.md  TRIGGERED_PIPELINE.md
fund_lens_etl/: config.py  database.py
fund_lens_etl/clients/: __init__.py  (+3 more)
notebooks/: 01_bronze_fec_extractors.ipynb  02_bronze_fec_loaders.ipynb  03_bronze_maryland_extractors.ipynb  03_populate_bronze_full.ipynb  04_bronze_maryland_loaders.ipynb  04_test_bronze_to_silver_transformer.ipynb  05_end_to_end_pipeline.ipynb  06_check_fec_volumes.ipynb  06_maryland_silver_transformation.ipynb  07_bronze_ingestion_flow.ipynb  07_maryland_gold_transformation.ipynb  08_check_fec_volumes.ipynb  08_silver_transform_flow.ipynb  09_gold_transform_flow.ipynb  10_prefect_deployments.ipynb  test_fec_extraction.ipynb  test_md_fec_cycle_count.ipynb  test_prefect_flow.ipynb
scripts/: backfill_committee_fields.py  backfill_gold_committee_fields.py  bulk_backfill.sh  check_candidate_ids.py  compare_fields.py  deploy-vm.sh  deploy.py  download_bulk_data.py  retry_committees.py  retry_states.py  run_bulk_ingestion.py  run_complete_bulk_ingestion.py  run_full_load_all_states.py  run_gold_transformation.py  run_silver_transformation.py  setup-db-user.sh  test_bulk_ingestion.py  update_extraction_states_from_db.py  verify_committee_candidate_links.py
terraform/: .gitignore  .terraform.lock.hcl  backend.hcl.example  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
(+73 files in other folders)
